app-in-apps/yaml/coder/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress
  namespace: coder
  labels:
    app: coder
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: coder.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
  tls:
    - hosts:
        - coder.nexus-core.dev
      secretName: coder-ingress-secret
